--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Football</title>
 </head>
 
 <body>
-    <h1>Tes</h1>
+    <nav class="teal lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+            <a href="#" class="brand-logo" id="logo-container">Football Club</a>
+            <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i class="material-icons prefix">menu</i></a>
+
+            <ul class="topnav right hide-on-med-and-down"></ul>
+            <ul class="sidenav" id="nav-mobile"></ul>
+        </div>
+    </nav>
+    <div id="body-content"></div>
 </body>
 
 </html>
