--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
-    <nav class="teal lighten-1" role="navigation">
-        <div class="nav-wrapper container">
-            <a href="#" class="brand-logo" id="logo-container">Football Club</a>
-            <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i class="material-icons prefix">menu</i></a>
+    <div class="navbar-fixed">
+        <nav class="teal lighten-1" role="navigation">
+            <div class="nav-wrapper container">
+                <a href="#" class="brand-logo" id="logo-container">Football Club</a>
+                <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i
+                        class="material-icons prefix">menu</i></a>
 
-            <ul class="topnav right hide-on-med-and-down"></ul>
-            <ul class="sidenav" id="nav-mobile"></ul>
-        </div>
-    </nav>
+                <ul class="topnav right hide-on-med-and-down"></ul>
+                <ul class="sidenav" id="nav-mobile"></ul>
+            </div>
+        </nav>
+    </div>
     <div id="body-content"></div>
 </body>
 
