--- a/src/detail.html
+++ b/src/detail.html
@@ -13,16 +13,18 @@
     <div class="navbar-fixed">
         <nav class="teal lighten-1" role="navigation">
             <div class="nav-wrapper container">
-                <a href="#" class="brand-logo" id="logo-container">Football Matches</a>
-                <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i
-                        class="material-icons prefix">menu</i></a>
-
-                <ul class="topnav right hide-on-med-and-down"></ul>
-                <ul class="sidenav" id="nav-mobile"></ul>
+                <a href="#" class="brand-logo" id="logo-container">Detail Match</a>
+                <a href="index.html" class="sidenav-trigger" data-target="nav-mobile"><i
+                        class="material-icons prefix">arrow_back</i></a>
             </div>
         </nav>
     </div>
     <div id="body-content"></div>
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+            <i class="large material-icons prefix">favorite</i>
+        </a>
+    </div>
 </body>
 
 </html>
