--- a/src/detail.html
+++ b/src/detail.html
@@ -21,7 +21,7 @@
     </div>
     <div id="body-content"></div>
     <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
+        <a class="btn-floating btn-large black" id="btn-save">
             <i class="large material-icons prefix">favorite</i>
         </a>
     </div>
