--- a/src/detail.html
+++ b/src/detail.html
@@ -13,15 +13,14 @@
     <div class="navbar-fixed">
         <nav class="teal lighten-1" role="navigation">
             <div class="nav-wrapper container">
-                <a href="#" class="brand-logo" id="logo-container">Detail Match</a>
-                <a href="index.html" class="sidenav-trigger" data-target="nav-mobile"><i
-                        class="material-icons prefix">arrow_back</i></a>
+                <a href="#" class="brand-logo center" id="logo-container">Detail Match</a>
+                <a href="index.html"><i class="material-icons prefix">arrow_back</i></a>
             </div>
         </nav>
     </div>
     <div id="body-content"></div>
     <div class="fixed-action-btn">
-        <a class="btn-floating btn-large black" id="btn-save">
+        <a class="btn-floating btn-large hidden" id="btn-save">
             <i class="large material-icons prefix">favorite</i>
         </a>
     </div>
