--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
+    <div class="">
         <nav class="teal lighten-1" role="navigation">
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo" id="logo-container">Football Matches</a>
@@ -22,7 +22,9 @@
             </div>
         </nav>
     </div>
-    <div id="body-content"></div>
+    <div id="body-content">
+        <list-match></list-match>
+    </div>
 </body>
 
 </html>
