memperbaiki back button in detail page

--- a/src/detail.html
+++ b/src/detail.html
@@ -14,7 +14,7 @@
         <nav class="teal lighten-1" role="navigation">
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo center" id="logo-container">Detail Match</a>
-                <a href="index.html"><i class="material-icons prefix">arrow_back</i></a>
+                <a href="#" id="back"><i class="material-icons prefix">arrow_back</i></a>
             </div>
         </nav>
     </div>
