--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,15 @@
 </head>
 
 <body>
-    <div class="">
-        <nav class="teal lighten-1" role="navigation">
-            <div class="nav-wrapper container">
-                <a href="#" class="brand-logo" id="logo-container">Football Matches</a>
-                <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i
-                        class="material-icons prefix">menu</i></a>
+    <nav class="teal lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+            <a href="#" class="brand-logo" id="logo-container">Football Matches</a>
+            <a href="#" class="sidenav-trigger" data-target="nav-mobile"><i class="material-icons prefix">menu</i></a>
 
-                <ul class="topnav right hide-on-med-and-down"></ul>
-                <ul class="sidenav" id="nav-mobile"></ul>
-            </div>
-        </nav>
-    </div>
+            <ul class="topnav right hide-on-med-and-down"></ul>
+            <ul class="sidenav" id="nav-mobile"></ul>
+        </div>
+    </nav>
     <div id="body-content">
         <list-match></list-match>
     </div>
