--- a/src/detail.html
+++ b/src/detail.html
@@ -18,6 +18,11 @@
             </div>
         </nav>
     </div>
+    <div class="overlay">
+        <div class="spanner show">
+            <div class="loader"></div>
+        </div>
+    </div>
     <div id="body-content"></div>
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large hidden" id="btn-save">
