--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
             <ul class="sidenav" id="nav-mobile"></ul>
         </div>
     </nav>
+    <div class="overlay">
+        <div class="spanner show">
+            <div class="loader"></div>
+        </div>
+    </div>
     <div id="body-content">
         <list-match></list-match>
     </div>
