--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <div id="body-content">
         <list-match></list-match>
     </div>
+    <script src="/src/register.js"></script>
 </body>
 
 </html>
