--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Football</title>
+    <link rel="stylesheet" href="">
+    <link rel="manifest" href="/src/manifest.json">
     <meta name="theme-color" content="#00897B" />
 </head>
 
