--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="">
-    <link rel="manifest" href="/src/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#00897B" />
 </head>
 
